--- a/views/components/modal/global/StudentAuthModal.module.css
+++ b/views/components/modal/global/StudentAuthModal.module.css
@@ -2,6 +2,7 @@
     width: 92vw;
     max-width: 48rem;
     height: calc(100vh - 4rem);
+    max-height: 40rem;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
