--- a/views/components/layouts/IndexHeader.module.css
+++ b/views/components/layouts/IndexHeader.module.css
@@ -58,6 +58,13 @@
     align-items: center;
 }
 
+.dt_logedin_btn{
+    padding: 0.5rem 0.8rem;
+    border-radius: 0.8rem;
+    display: flex;
+    align-items: center;
+}
+
 .dt_login_user_icon{
     width: 1.5rem;
     margin-left: 1.2rem;
@@ -65,6 +72,10 @@
 
 .dt_login_t{
     margin-left: 0.3rem;
+}
+
+.side_menu_con{
+    display: none;
 }
 
 @media(max-width:1024px){
@@ -80,7 +91,7 @@
     .desktop_con{
         display: none;
     }
-    
+
     .mobile_con{
         display: flex;
         height: 4.2rem;
@@ -98,10 +109,65 @@
     .mob_logo_img{
         height: 3.2rem;
     }
+
+    .side_menu_con{
+        display: flex;
+        position: absolute;
+        right: -16rem;
+        top: 0;
+        width: 15rem;
+        height: 100vh;
+        z-index: 10;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-right: 1rem;
+        transition: ease 300ms;
+        background-color: white;
+    }
+
+    .sm_close_btn{
+        margin-right: calc(7vw - 1rem);
+        width: 2rem;
+        padding: 0.3rem;
+        margin-top: 1rem;
+        cursor: pointer;
+        opacity: 0.8;
+    }
+
+    .sm_divider{
+        width: calc(100% - 1rem);
+        height: 2px;
+        margin-top: 1rem;
+    }
+
+    .sm_login_btn{
+        display: flex;
+        padding: 0.5rem 0.8rem;
+        border-style: solid;
+        border-width: 2px;
+        border-radius: 0.8rem;
+        align-items: center;
+        margin-top: 1.6rem;
+        margin-bottom: 0.4rem;
+    }
+
+    .sm_logedin_btn{
+        display: flex;
+        padding: 0.5rem 0.8rem;
+        border-radius: 0.8rem;
+        align-items: center;
+        margin-top: 1.6rem;
+        margin-bottom: 0.4rem;
+    }
+
+    .sm_link{
+        margin-top: 1.6rem;
+        padding-right: 0.6rem;
+    }
 }
 
 @media(max-width:767px){
-    
+
     .header_con{
         height: 3rem;
     }
@@ -122,5 +188,13 @@
 
     .mob_logo_img{
         height: 2.8rem;
+    }
+
+    .sm_close_btn{
+        margin-right: calc(7vw - 1rem);
+        width: 2rem;
+        padding: 0.4rem;
+        margin-top: 0.4rem;
+        cursor: pointer;
     }
 }
