--- a/views/dynamics/dashboard/Settings.module.css
+++ b/views/dynamics/dashboard/Settings.module.css
@@ -5,14 +5,22 @@
     padding: 2rem 0;
 }
 
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
 .setting_card{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     border-radius: 1rem;
     padding: 2rem 1rem;
-    width: 18rem;
-    margin: 0.5rem;
+    width: 24rem;
+    min-height: 8rem;
+    margin: 1rem;
 }
 
 .setting_card_img{
