--- a/views/dynamics/index/Store.module.css
+++ b/views/dynamics/index/Store.module.css
@@ -1,12 +1,17 @@
 .con{
     width: 100%;
-    min-height: calc(100vh - 5rem);
+    min-height: calc(100vh - 5.6rem);
     display: flex;
     flex-direction: row-reverse;
     direction: ltr;
     padding: 0 3rem;
     background-color: #f5f5f5;
     /* background-color: rgb(253, 236, 236); */
+}
+
+.loading{
+    width: 100%;
+    min-height: calc(100vh - 5.6rem);
 }
 
 .filter_bar_con{
@@ -78,6 +83,14 @@
 }
 
 @media(max-width:1082px){
+
+    .con{
+        min-height: calc(100vh - 4.2rem);
+    }
+    
+    .loading{
+        min-height: calc(100vh - 4.2rem);
+    }
     
     .filter_bar_con{
         display: none;
@@ -148,6 +161,14 @@
 }
 
 @media(max-width:767px){
+
+    .con{
+        min-height: calc(100vh - 3rem);
+    }
+    
+    .loading{
+        min-height: calc(100vh - 3rem);
+    }
 
     .mobile_filter_sort_bar{
         width: 35rem;
