--- a/views/layouts/StudentPanelLayout.module.css
+++ b/views/layouts/StudentPanelLayout.module.css
@@ -33,7 +33,7 @@
     background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgb(0, 0, 71) 35%, rgb(0, 10, 95) 100%);
     border-radius: 0 0 1rem 1rem;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -77,6 +77,14 @@
 
 .tab_btn_border_selected{
     opacity: 1 !important;
+}
+
+.username{
+    font-weight: 500;
+    width: 100%;
+    padding-right: calc(2rem + 5%);
+    height: 2.5rem;
+    margin-top: 1.4rem;
 }
 
 @media(max-width:1024px){
