--- a/views/dynamics/stdPanel/EditProfile.module.css
+++ b/views/dynamics/stdPanel/EditProfile.module.css
@@ -1,11 +1,87 @@
 .con{
-    width: 100%;
-    height: auto;
     display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 3rem;
 }
 
+.wrapper_card{
+    width: 100%;
+    max-width: 64rem;
+    display: flex;
+    min-height: 10rem;
+    border-radius: 1rem;
+    margin-top: 3rem;
+    padding-top: 2.6rem;
+    background-color: white;
+}
+
+.title_card{
+    position: absolute;
+    padding: 0.6rem;
+    width: 16rem;
+    right: calc(50% - 8rem);
+    top: -1.4rem;
+    text-align: center;
+    font-weight: 700;
+    border-radius: 0.6rem;
+    background-color: white;
+}
+
+.inputs_wrapper{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    direction: rtl;
+    padding-top: 1rem;
+    padding-right: 3vw;
+    padding-left: 3vw;
+}
+
+.input{
+    width: calc(50% - 2vw) !important;
+}
+
+.input:nth-child(even){
+    margin-right: 4vw;
+}
+
+.unchangable1{
+    display: flex;
+    width: calc(50% - 2vw) !important;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 1rem;
+    height: 3.6rem;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+}
+
+.unchangable1:nth-child(even){
+    margin-right: 4vw;
+}
+
+.unchangable_label{
+    position: absolute;
+    top: -0.8rem;
+    right: 1rem;
+    padding: 0 0.4rem;
+}
+
+.submit_wrapper{
+    width: 100%;
+    margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.submit_btn{
+    width: 12rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
 
 @media(max-width:1024px){
     
@@ -13,4 +89,17 @@
 
 @media(max-width:767px){
 
+    .inputs_wrapper{
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .input{
+        width: 100% !important;
+        max-width: 22rem;
+    }
+
+    .input:nth-child(even){
+        margin-right: 0;
+    }
 }
