--- a/views/dynamics/dashboard/Profile.module.css
+++ b/views/dynamics/dashboard/Profile.module.css
@@ -5,6 +5,10 @@
     padding-bottom: 3rem;
 }
 
+.loading{
+    min-height: 70vh;
+}
+
 .wrapper_card{
     width: 100%;
     max-width: 64rem;
@@ -40,10 +44,37 @@
 
 .input{
     width: calc(50% - 2vw) !important;
+    margin-top: 2rem !important;
+    margin-bottom: 0 !important;
 }
 
 .input:nth-child(even){
     margin-right: 4vw;
+}
+
+.unchangable1{
+    display: flex;
+    margin-top: 2rem !important;
+    width: calc(50% - 2vw) !important;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 1rem;
+    height: 3.6rem;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+}
+
+.unchangable1:nth-child(even){
+    margin-right: 4vw;
+}
+
+.unchangable_label{
+    position: absolute;
+    top: -0.7rem;
+    right: 1rem;
+    padding: 0 0.4rem;
+    font-size: 0.75rem;
 }
 
 .submit_wrapper{
@@ -77,5 +108,18 @@
 
     .input:nth-child(even){
         margin-right: 0;
+    }
+
+    .unchangable1{
+        width: 100% !important;
+        max-width: 22rem;
+    }
+    
+    .unchangable1:nth-child(even){
+        margin-right: 0;
+    }
+
+    .submit_btn{
+        margin-top: 1rem;
     }
 }
