--- a/views/dynamics/stdPanel/MyCourses.module.css
+++ b/views/dynamics/stdPanel/MyCourses.module.css
@@ -8,7 +8,7 @@
 
 .mcc_con{
     width: calc(50% - 1.5rem);
-    height: 5rem;
+    height: 7rem;
     margin-top: 2rem;
     border-radius: 1rem;
     display: flex;
@@ -35,10 +35,28 @@
     font-weight: 500;
 }
 
+.mcc_sec1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 5.5rem;
+    margin-right: 0.75rem;
+    margin-left: 1rem;
+}
+
 .mcc_show_btn{
-    margin-right: 1rem !important;
-    width: 5rem !important;
-    margin-left: 1.25rem;
+    margin: 0 !important;
+    width: 5.5rem !important;
+    height: 2.2rem !important;
+}
+
+.mcc_license_btn{
+    margin: 0 !important;
+    margin-top: 0.5rem !important;
+    width: 5.5rem !important;
+    height: 2.2rem !important;
 }
 
 .pagination_con{
