--- a/views/layouts/StudentPanelLayout.module.css
+++ b/views/layouts/StudentPanelLayout.module.css
@@ -80,11 +80,39 @@
 }
 
 .username{
-    font-weight: 500;
+    font-weight: 400;
     width: 100%;
     padding-right: calc(2rem + 5%);
     height: 2.5rem;
     margin-top: 1.4rem;
+    display: flex;
+    align-items: center;
+}
+
+.user_icon{
+    height: 2rem;
+    width: 2rem;
+    padding-bottom: 0.5rem;
+    margin-left: 1rem;
+}
+
+.logout_con{
+    position: absolute;
+    left: 1.5rem;
+    top: 1.5rem;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    user-select: none;
+}
+
+.logout_img{
+    height: 1.5rem;
+    width: 1.5rem;
+}
+
+.logout_text{
+    margin-left: 0.5rem;
 }
 
 @media(max-width:1024px){
