--- a/views/dynamics/index/Store.module.css
+++ b/views/dynamics/index/Store.module.css
@@ -75,7 +75,7 @@
 
 .store_card_wrapper{
     width: 100%;
-    height: auto;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row-reverse;
@@ -92,6 +92,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-end;
 }
 
 .pagination{
@@ -139,6 +140,9 @@
     }
 
     .breadcrum_con{
+        height: unset;
+        min-height: 3rem;
+        padding: 0.5rem 0;
         width: 58rem;
     }
 
